NNandDL added and README changed

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a git repo for the SAACS reading club.
+This is a git repo for the SAACS reading club. We cover a part of the website/book Neural Networks and Deep Learning by Michael Nielsen. Which is the reason why his repo is being used.
